# rosviz-web

./: .env.example  .gitignore  AlertDesignDoc.txt  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docker/: Dockerfile.ros  ros-entrypoint.sh
monitoring/grafana/dashboards/: robot_alerts.json
monitoring/grafana/provisioning/alerting/: alert_rules.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: alert_monitor_node.py  inject_test_alerts.py
simulation/: launch_all.sh
simulation/worlds/: generate_world.sh  turtlebot3_world.template.sdf  turtlebot3_world_base.sdf
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/common/: page.tsx
src/app/robot/[id]/: page.tsx
src/app/sensor-data/: page.tsx
src/components/dashboard/: AlertHistory.tsx  Controls.tsx  DashboardClient.tsx  DebugDiscovery.tsx  Fleet2DMap.tsx  MapContent.tsx  SensorData.tsx  TelemetryPanel.tsx  VideoGrid.tsx  VideoStream.tsx
src/components/dashboard/sensor-components/: BatteryStats.tsx  DepthData.tsx  PointCloud.tsx  PointCloudViewer.tsx  RobotModel.tsx  VideoFeed.tsx
src/components/ui/: RobotSelector.tsx
src/hooks/: useDiscoveredRobots.ts  useROS.ts  useRobotSelection.ts  useRobotSelection.tsx  useTF.ts
src/lib/: rosTopics.ts  rosbridge.ts
src/types/: ros.ts
