[package]
name = "rosviz-desktop"
version = "0.1.0"
description = "A real-time desktop dashboard for monitoring and controlling ROS 2 robots."
authors = ["Prakash Aryan"]
license = "MIT License"
repository = "https://github.com/prakash-aryan/rosviz-web.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
